fix: cleanup cert.key and cert.crt values after template inclusion

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -99,6 +99,8 @@ spec:
             cat << EOF | kubectl create -f -
             {{- include (print $.Template.BasePath "/certificate-secret.yaml") . | indent 12 }}
             EOF
+            {{- $_ := set $values.Values.cert "crt" nil }}
+            {{- $_ := set $values.Values.cert "key" nil }}
             
             {{- if .Release.IsInstall }}
             kubectl scale --timeout 1h --replicas 1 -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
