fix: allow to seamlessy create or patch certificate and webhooks

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -57,7 +57,7 @@ rules:
   verbs:
   - get
   - create
-  - delete
+  - patch
 - apiGroups: ["apiextensions.k8s.io", "customresourcedefinitions.apiextensions.k8s.io"]
   resources:
   - customresourcedefinitions
