--- a/stackgres-k8s/install/helm/stackgres-operator/templates/certificate-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/certificate-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.cert.key .Values.cert.crt }}
+{{- if or (and (not .Release.IsInstall) (not .Release.IsUpgrade)) (and .Values.cert.key .Values.cert.crt) }}
 apiVersion: v1
 kind: Secret
 metadata:
