fix: native image missing templates resources

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -9,7 +9,8 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sh,\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
-  -H:IncludeResources=.*/banner.txt
+  -H:IncludeResources=.*/banner.txt,\
+  -H:IncludeResources=templates/.*
 quarkus.native.native-image-xmx=16g
 
 # Logger Production
