it: added coreutils to stackgres/it image

--- a/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
+++ b/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
@@ -3,7 +3,7 @@
 #
 # Build the image with:
 #
-# docker build -f src/test/docker/Dockerfile.it -t stackgres/it:6.0 .
+# docker build -f src/test/docker/Dockerfile.it -t stackgres/it:7.0 .
 #
 ###
 FROM docker:19.03
@@ -15,4 +15,4 @@ RUN chmod a+x /bin/kind
 RUN wget -q -O /bin/k3d https://github.com/rancher/k3d/releases/download/v1.5.1/k3d-linux-amd64
 RUN chmod a+x /bin/k3d
 RUN wget -q https://get.helm.sh/helm-v3.2.0-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm
-RUN apk add gnupg jq curl bash zsh
+RUN apk add coreutils gnupg jq curl bash zsh
