--- a/stackgres-k8s/install/helm/stackgres-operator/templates/mutating-webhook-configuration.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/mutating-webhook-configuration.yaml
@@ -106,4 +106,20 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgbackup'
       caBundle: {{ .Values.cert.crt }}
+  - name: sgdistributedlogs.{{ .Release.Name }}.{{ .Release.Namespace }}
+    {{- if (semverCompare ">1.12-0" .Capabilities.KubeVersion.GitVersion) }}
+    sideEffects: None
+    {{- end }}
+    rules:
+      - operations: ["CREATE"]
+        apiGroups: ["stackgres.io"]
+        apiVersions: ["*"]
+        resources: ["sgdistributedlogs"]
+    failurePolicy: Fail
+    clientConfig:
+      service:
+        namespace: {{ .Release.Namespace }}
+        name: {{ .Release.Name }}
+        path: '/stackgres/mutation/sgdistributedlogs'
+      caBundle: {{ .Values.cert.crt }}
 {{- end }}
