feat: Simple AuthN for the web UI / REST API using JWT

--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -10,7 +10,6 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
   -H:IncludeResources=.*/banner.txt
-quarkus.native.native-image-xmx=16g
 
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
@@ -19,24 +18,20 @@ quarkus.log.category."io.stackgres".level=ALL
 quarkus.log.category."io.quarkus".level=DEBUG
 
 # Logger Development
-%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
+%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{5.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=ALL
 %dev.quarkus.log.category."io.stackgres".level=ALL
 %dev.quarkus.log.category."io.quarkus".level=DEBUG
 
 # SSL configuration
-quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
-quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
 
-# Test SSL configuration
-%test.quarkus.http.ssl.certificate.file=certs/server.crt
-%test.quarkus.http.ssl.certificate.key-file=certs/server-key.pem
-%test.quarkus.ssl.native=true
-
 # Authentication
-
-quarkus.http.auth.basic=true
+quarkus.smallrye-jwt.enabled=true
+mp.jwt.verify.publickey.location=META-INF/jwt/rsa_public.pem
+mp.jwt.verify.issuer=https://api.stackgres.io/auth
+smallrye.jwt.verify.aud=api-websecurity
+smallrye.jwt.require.named-principal=true
 
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
