feat: Simple AuthN for the web UI / REST API using JWT

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
@@ -10,9 +10,10 @@ metadata:
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/managed-by: Helm
+    api.stackgres.io/auth: user
 type: Opaque
 data:
-  user: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
-  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | b64enc | quote }}{{ end }}
+  k8sUsername: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
+  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | sha256sum | b64enc | quote }}{{ end }}
 {{- end }}
 {{- end }}
