--- a/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
@@ -14,6 +14,6 @@ metadata:
 type: Opaque
 data:
   k8sUsername: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
-  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | sha256sum | b64enc | quote }}{{ end }}
+  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | sha256sum | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | sha256sum | b64enc | quote }}{{ end }}
 {{- end }}
 {{- end }}
