feat: Simple AuthN for the web UI / REST API using JWT

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
@@ -1,5 +1,4 @@
 {{- if and .Values.deploy.restapi .Values.authentication }}
-{{- if or .Values.authentication.user .Values.authentication.password }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,7 +12,12 @@ metadata:
     api.stackgres.io/auth: user
 type: Opaque
 data:
-  k8sUsername: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
-  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | sha256sum | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | sha256sum | b64enc | quote }}{{ end }}
-{{- end }}
+  k8sUsername: {{ .Values.authentication.user | b64enc | quote }}
+  {{- if .Values.authentication.password }}
+  password: {{ .Values.authentication.password | sha256sum | b64enc | quote }}
+  {{- else }}
+  {{- $password := randAlphaNum 40 }}
+  password: {{ $password | sha256sum | b64enc | quote }}
+  clearPassword: {{ $password | b64enc | quote }}
+  {{- end }}
 {{- end }}
