--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -28,7 +28,7 @@ quarkus.ssl.native=true
 
 # Authentication
 quarkus.smallrye-jwt.enabled=true
-mp.jwt.verify.publickey.location=META-INF/jwt/rsa_public.pem
+mp.jwt.verify.publickey.location=file:///etc/operator/certs/jwt-rsa.pub
 mp.jwt.verify.issuer=https://api.stackgres.io/auth
 smallrye.jwt.verify.aud=api-websecurity
 smallrye.jwt.require.named-principal=true
