--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,10 +89,13 @@ native image:
     - stackgres-runner
   dependencies:
     - compile
-  timeout: 1 hour
+  timeout: 12 hour
   script:
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
-    - 'flock -w 3600 /tmp/stackgres-build-native mvn $MAVEN_CLI_OPTS package -P native'
+    - |
+      flock /tmp/stackgres-build-native  \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS package -P native
     - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/operator/target/'
     - 'cp $GRAALVM_HOME/jre/lib/security/cacerts stackgres-k8s/src/operator/target/'
     - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/api-web/target/'
@@ -138,11 +141,14 @@ build test images:
     - stackgres-runner
   dependencies:
     - compile
-  timeout: 1 hour
+  timeout: 12 hour
   retry: 2
   script:
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests -Dquarkus.skipAugmentation=true"
-    - 'mvn $MAVEN_CLI_OPTS pre-integration-test -P integration'
+    - |
+      flock /tmp/stackgres-build-it-image  \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS pre-integration-test -P integration
 
 build jvm image:
   stage: pre test
@@ -150,14 +156,17 @@ build jvm image:
     - stackgres-runner
   dependencies:
     - compile
-  timeout: 1 hour
+  timeout: 12 hour
   retry: 2
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
-    - 'flock -w 3600 /tmp/stackgres-build-jvm-image mvn $MAVEN_CLI_OPTS package -P build-image-jvm'
+    - |
+      flock /tmp/stackgres-build-jvm-image  \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS package -P build-image-jvm
 
 build native image:
   stage: pre test
@@ -166,14 +175,17 @@ build native image:
   dependencies:
     - compile
     - native image
-  timeout: 1 hour
+  timeout: 12 hour
   retry: 2
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
-    - 'flock -w 3600 /tmp/stackgres-build-native-image mvn $MAVEN_CLI_OPTS package -P build-image-native'
+    - |
+      flock /tmp/stackgres-build-native-image  \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS package -P build-image-native
   only:
     variables:
       - $CI_COMMIT_REF_NAME == "development"
@@ -188,12 +200,13 @@ integration test:
     - stackgres-runner
   dependencies:
     - compile
-  timeout: 1 hour
+  timeout: 12 hour
   script:
     - |
-      flock -s -w 3600 /tmp/stackgres-build-native \
-        flock -w 3600 /tmp/stackgres-integration-test mvn $MAVEN_CLI_OPTS verify -P integration \
-        -Dit.skipBuildContainer=true
+      flock -s /tmp/stackgres-build-native \
+        flock /tmp/stackgres-integration-test \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS verify -P integration -Dit.skipBuildContainer=true
   only:
     variables:
       - $DO_EXTERNAL
@@ -212,16 +225,18 @@ integration test jvm image:
   variables:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: jvm-image
-  timeout: 1 hour
+  timeout: 12 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
     - |
-      flock -s -w 3600 /tmp/stackgres-build-native \
-        flock -w 3600 /tmp/stackgres-integration-test-jvm-image mvn $MAVEN_CLI_OPTS verify -P integration \
-        -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
-        -Dit.skipBuildContainer=true
+      flock -s /tmp/stackgres-build-native \
+        flock /tmp/stackgres-integration-test-jvm-image  \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS verify -P integration \
+          -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
+          -Dit.skipBuildContainer=true
   artifacts:
     expire_in: 1 week
     when: always
@@ -238,16 +253,18 @@ integration test native image:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: native-image
     SKIP_QUARKUS_TEST: "true"
-  timeout: 1 hour
+  timeout: 12 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
     - |
-      flock -s -w 3600 /tmp/stackgres-build-native \
-        flock -w 3600 /tmp/stackgres-integration-test-native-image mvn $MAVEN_CLI_OPTS verify -P integration \
-        -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
-        -Dit.skipBuildContainer=true
+      flock -s /tmp/stackgres-build-native \
+        flock /tmp/stackgres-integration-test-native-image \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS verify -P integration \
+          -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
+          -Dit.skipBuildContainer=true
   only:
     variables:
       - $CI_COMMIT_REF_NAME == "development"
