fix: workaround for https://github.com/quarkusio/quarkus/issues/9999

--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -9,7 +9,8 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sh,\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
-  -H:IncludeResources=.*/banner.txt
+  -H:IncludeResources=.*/banner.txt,\
+  -H:ReflectionConfigurationFiles=reflection-config.json
 
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
