--- a/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: stackgres-operator
-version: 0.9-SNAPSHOT
+version: 0.9-beta2
 kubeVersion: "1.11.0-0 - 1.17.x-O"
 description: StackGres Operator
 keyworkds:
@@ -19,5 +19,5 @@ maintainers:
     url: https://ongres.com
 engine: gotpl
 icon: https://assets.gitlab-static.net/uploads/-/system/project/avatar/12584701/logo-stackgres.png?width=64
-appVersion: 0.9-SNAPSHOT
+appVersion: 0.9-beta2
 deprecated: false
