--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -230,7 +230,7 @@ e2e tests jvm image:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_ONLY_INCLUDES="$(sh stackgres-k8s/e2e/e2e get_all_non_exclusive_specs)"'
+    - 'export E2E_RUN_ONLY="non_exclusive"'
     - |
       flock -s /tmp/stackgres-build-native \
         flock /tmp/stackgres-integration-test-jvm-image \
@@ -258,7 +258,7 @@ e2e exclusive tests jvm image:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_ONLY_INCLUDES="$(sh stackgres-k8s/e2e/e2e get_all_exclusive_specs)"'
+    - 'export E2E_RUN_ONLY="exclusive"'
     - |
       flock -s /tmp/stackgres-build-native \
         flock /tmp/stackgres-integration-test-jvm-image-exclusive \
@@ -287,7 +287,7 @@ e2e tests native image:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_ONLY_INCLUDES="$(sh stackgres-k8s/e2e/e2e get_all_non_exclusive_specs)"'
+    - 'export E2E_RUN_ONLY="non_exclusive"'
     - |
       flock -s /tmp/stackgres-build-native \
         flock /tmp/stackgres-integration-test-native-image \
@@ -323,7 +323,7 @@ e2e exclusive tests native image:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_ONLY_INCLUDES="$(sh stackgres-k8s/e2e/e2e get_all_exclusive_specs)"'
+    - 'export E2E_RUN_ONLY="exclusive"'
     - |
       flock -s /tmp/stackgres-build-native \
         flock /tmp/stackgres-integration-test-native-image-exclusive \
